# notification

./: README.md
.devcontainer/: devcontainer.json
.devcontainer/features/cargo-toolkit/: devcontainer-feature.json
.github/: dependabot.yml
crates/notification-crud/: Cargo.toml  Justfile  README.md  build.rs
crates/notification-crud/events/: create.json  delete.json  list.json
crates/notification-crud/proto/: notification.proto
crates/notification-crud/scripts/: invoke.sh
crates/notification-crud/src/: handler.rs  invoke.rs  lib.rs  main.rs  notification.rs  operation.rs  type.rs
crates/notification-crud/src/operation/: create.rs
crates/notification-crud/tests/: tests.rs
crates/x-46ki75-notification-lib/: Cargo.toml
crates/x-46ki75-notification-lib/src/: lib.rs  record.rs
terraform/aws/: .terraform.lock.hcl  dynamodb.tf  lambda-notification-crud.tf  lambda-notification-pubilsh.tf  lambda.tf  provider.tf
terraform/github/: locals.tf  provider.tf
