[package]
name = "x-46ki75-notification-lib"
description = "Invoke AWS Lambda Function to publish notifications."
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.3"
aws-sdk-dynamodb = "1.75.0"
aws-sdk-lambda = "1.79.0"
chrono = "0.4.41"

lambda_runtime = "0.13.0"
serde = "1"
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.16.0", features = ["v4"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "notification-crud"
path = "src/main.rs"
