[package]
name = "x-46ki75-notification-lib"
description = "Invoke AWS Lambda Function to publish notifications."
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.8"
aws-sdk-dynamodb = "1.94.0"
aws-sdk-lambda = "1.98.0"
chrono = "0.4.42"

lambda_runtime = "0.14.4"
serde = "1"
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "notification-crud"
path = "src/main.rs"
